--- a/test/index.html
+++ b/test/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	 //移动端必备
+	 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
+	 <meta name="format-detection" content="telephone=no">
+	  <meta name="applicable-device" content="mobile">
 	<title>Document</title>
 	<link rel="stylesheet" type="text/css" href="myproject/stylesheets/style.css">
 	<link rel="stylesheet" type="text/css" href="myproject/stylesheets/share.css">
