--- a/test/index.html
+++ b/test/index.html
@@ -14,10 +14,10 @@
 		function cssChange(){
 		    // var link = document.getElementsByTagName('link')[3];
 		    var link = document.getElementById('aa');
-		    //PC端应用的样式文件：style_A.css
+		    //PC端应用的样式文件：style_red.css
 		    alert('当前应用样式文件是：'+link.getAttribute('href'));
 		    link.setAttribute('href','css/blue.css');
-		    //Mobile端应用样式文件：style_B.css
+		    //Mobile端应用样式文件：style_blue.css
 		    alert('即将应用样式文件是：'+link.getAttribute('href'));
 		}
 		//懒人建站http://www.51xuediannao.com/
